Fix text overflow in navbar brand on Windows

--- a/source/assets/less/application.less
+++ b/source/assets/less/application.less
@@ -30,7 +30,7 @@ body {
     font-size: @font-size-small;
     text-transform: uppercase;
     line-height: 15px;
-    width: 175px;
+    width: 177px;
 
     &:hover {
       color: black;
